--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
     "expo-linear-gradient": "~12.1.2",
@@ -22,7 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true,
   "resolutions": {
