--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.15",
     "expo-constants": "~14.2.1",
     "expo-linear-gradient": "~12.1.2",
@@ -17,9 +17,10 @@
     "expo-router": "^1.5.3",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "typescript": "^4.9.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
